update get ride detail api, model, and doc
