# src/db/rideModel.ts
@@ -14,6 +14,7 @@ type Ride = {
 
 type RideModel = {
     getRides: () => Promise<Ride[]>;
+    getRide: (id: number) => Promise<Ride>;
 };
 
 let generateRideModel = (db: Database): RideModel => {
@@ -38,8 +39,28 @@ let generateRideModel = (db: Database): RideModel => {
             });
         });
     };
+    let getRide = (rideId: number): Promise<Ride> => {
+        return new Promise((resolve, reject) => {
+            db.all('SELECT * FROM Rides WHERE rideID= ?', rideId, function(err, rows) {
+                if (err) {
+                    return reject({
+                        error_code: 'SERVER_ERROR',
+                        message: 'Unknown error',
+                    });
+                }
+                if (rows.length === 0) {
+                    return reject({
+                        error_code: 'RIDES_NOT_FOUND_ERROR',
+                        message: 'Could not find any rides',
+                    });
+                }
+                resolve(rows[0]);
+            });
+        });
+    };
     return {
         getRides,
+        getRide,
     };
 };
 
